--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@types/node": "^18.11.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "client/node_modules/.bin/react-scripts start",
+    "build": "client/node_modules/.bin/react-scripts build",
+    "test": "client/node_modules/.bin/react-scripts test",
+    "eject": "client/node_modules/.bin/react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
