--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "shelby-portfolio",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://Patrick-Sherlund.github.io/shelby-reilly-portfolio",
   "dependencies": {
     "cra-template-pwa-typescript": "2.0.0",
     "react": "^18.2.0",
@@ -21,10 +22,12 @@
     "@types/node": "^18.11.9"
   },
   "scripts": {
-    "start": "client/node_modules/.bin/react-scripts start",
-    "build": "client/node_modules/.bin/react-scripts build",
-    "test": "client/node_modules/.bin/react-scripts test",
-    "eject": "client/node_modules/.bin/react-scripts eject"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
